--- a/kindk8/deployment.yaml
+++ b/kindk8/deployment.yaml
@@ -41,7 +41,7 @@ spec:
         - name: DB_DRIVER
           value: "postgres"
         - name: DB_HOST
-          value: "192.168.1.5"
+          value: "postgres.default.svc.cluster.local"
         - name: DB_PORT
           value: "5432"
         - name: DB_NAME
